# SOBER

./: LICENSE  README.md  _drug_modelling.py  _pi.py  _prior_update.py  _settings.py  _tmvn.py  _utils.py  _weights.py  _wkde.py  pyproject.toml  requirements.txt  setup.cfg
SOBER/: __init__.py  _expectation_propagation.py  _gp.py  _inverse_modelling.py  _kernel.py  _pi.py  _prior.py  _prior_update.py  _rchq.py  _sampler.py  _settings.py  _sober.py  _sober_wrapper.py  _tmvn.py  _utils.py  _weights.py  _wkde.py  inverse_modelling.py
SOBER/BASQ/: __init__.py  _basq.py  _quadrature.py  _scale_mmlt.py
SOBER/BOLFI/: __init__.py  _botorch_acquisition.py  _gpytorch_bolfi_model.py
SOBER/FBGP/: _acquisition_function.py  _fitbo.py  _fully_Bayesian_gp.py  _hyperprior.py  (+1 more)
benchmarks/: _batch_bo.py
examples/: Hartmann.py  ackley.py  hartmann.py  ising.py  malaria.py  maxsat.py  pest.py  rosenbrock.py  shekel.py  solvent.py  svm.py
experiments/: _ackley.py  _ecm.py  _generate_drug_dataset.py  _hartmann.py  _ising.py  _malaria.py  _maxsat.py  _pest.py  _rosenbrock.py  _shekel.py  _solvent.py  _svm.py  _synthetic_function.py  ecm.py
tutorials/: 00 Quick start.ipynb  01 How does SOBER work.ipynb  01 How does SOBER work?.ipynb  01_How_does_SOBER_work?.ipynb  03 Customise acquisition function.ipynb  04 Fast fully Bayesian Gaussian process modelling.ipynb  05 Fast Bayesian inference for simulation-based inference.ipynb  06 Tips for drug discovery.ipynb  07 Compare with Thompson sampling.ipynb  08 Benchmarking against batch BO methods.ipynb  Advanced 01 BOLFI modelling.ipynb
(+24 files in other folders)
